--- a/projekt-hype/site/css/main.css
+++ b/projekt-hype/site/css/main.css
@@ -3,37 +3,42 @@
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-color: lightsteelblue;
+    /*background-color: lightsteelblue;*/
 }
 
-.nav {
+.nav { /*nav knapparna */
     margin: 0px 10px 0px 10px;
     padding: 5px;
-    border-right: 2px solid white;
-    border-left: 2px solid white;
+    color: #B6B6B6;
+
+}
+
+.nav:hover {      /*när musen hovrar över så händer detta*/
+    border-top: 2px solid #90A1C9;
+    padding: 3px 5px 5px 5px; /*Detta fixade så att meny texten inte rörde sig när man "hovrade" över dem*/
+    background-color: #232222;
     color: white;
+
 }
 
-.nav:hover {
-    background-color: darkblue;
-}
-
-.navin {
+.navin { /*intryckt menyknapp*/
     margin: 0px 10px 0px 10px;
-    padding: 5px;
-    border-right: 2px solid white;
-    border-left: 2px solid white;
+    padding: 3px 5px 5px 5px;
+    border-top: 2px solid #90A1C9;
     color: white;
-    background-color: darkblue;
+    background-color: #232222;
 }
 
-.utnav {
+.utnav { /*hela nav menyn*/
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 930px;
     background-color: black;
     align-items: center;
     justify-content: center;
+    border-radius: 6px; /*rundar kanterna på meny rutan*/
+    margin-bottom: 5px;
+
 }
 
 a {
@@ -46,9 +51,7 @@ a {
     flex-direction: column;
     align-items: center;
     width: 700px;
-    border-right: 3px solid black;
-    border-left: 3px solid black;
-    border-bottom: 3px solid black;
+    border: 3px solid black;
     background-color: white;
 }
 
