--- a/projekt-hype/site/css/main.css
+++ b/projekt-hype/site/css/main.css
@@ -1,8 +1,23 @@
+.bgstart { /* Stal kanske denna >:) */
+  background: url("") no-repeat center top fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} 
+
+.bgpodracing { /* Stal kanske denna >:) */
+  background: url("../img/bg.gif") no-repeat center top fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} 
+
 .main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
     /*background-color: lightsteelblue;*/
 }
 
@@ -53,6 +68,7 @@ a {
     width: 700px;
     border: 3px solid black;
     background-color: white;
+    border-radius: 6px;
 }
 
 .innelada {
@@ -65,6 +81,58 @@ a {
     height: 100px;
 }
 
-body {
+.margin0 {
     margin: 0;
+}
+
+.txt {
+    font-family: "Comic Sans MS", sans-serif;
+}
+
+.header {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+}
+
+.hype {
+    font-size: 12em;
+    color: #2ecc71;
+}
+
+.lbut {
+    height: 120px;
+    width: 100%;
+    background-color: #27ae60;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+}
+
+.loadingbar {
+    height: 90px;
+    width: 98%;
+    background-color: #2ecc71;
+    -webkit-animation-name: loading;
+    -webkit-animation-duration: 5s;
+    margin-left: 15px;
+}
+
+@keyframes loading {
+    from {width: 0%;}
+    to {width: 98%;}
+}
+
+.lbarc {
+    position: relative;
+    top: -23%;
+    left: 89%;
+    -webkit-animation-name: lbar;
+    -webkit-animation-duration: 3s;
+}
+
+@keyframes lbar {
+    from {left: 5%;}
+    to {left: 89%;}
 }
