--- a/projekt-hype/site/css/main.css
+++ b/projekt-hype/site/css/main.css
@@ -143,3 +143,23 @@ a {
     from {left: 5%;}
     to {left: 89%;}
 }
+
+.bildlada {
+    width: 1300px;
+    border: 3px solid black;
+    background-color: white;
+    border-radius: 6px;
+}
+
+.innebild {
+    margin: 5px 0px 5px 10px;
+    border: 2px solid #232222;
+    border-radius: 10px;
+}
+
+.rubrik {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #1D2DEC;
+}
