--- a/projekt-hype/site/css/main.css
+++ b/projekt-hype/site/css/main.css
@@ -3,28 +3,28 @@ body {
 }
 
 .bgstart { /* Stal kanske denna >:) */
-  background: url("..//img/bgstart.jpg") no-repeat center top fixed; 
+  background: url("..//img/bgstart.jpg") no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-} 
+}
 
 .bgpodracing { /* Stal kanske denna >:) */
-  background: url("../img/bg.gif") no-repeat center top fixed; 
+  background: url("../img/bg.gif") no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-} 
+}
 
 .bgtest { /* Stal kanske denna >:) */
-  background: url("../img/podridegif.gif") no-repeat center top fixed; 
+  background: url("../img/podridegif.gif") no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-} 
+}
 
 
 .main {
@@ -82,10 +82,16 @@ a {
     border: 3px solid black;
     background-color: white;
     border-radius: 6px;
+    margin-bottom: 10px;
 }
 
 .innelada {
     margin: 20px;
+    font-family: georgia;
+}
+
+.innerubrik {
+  font-family: impact;
 }
 
 .margin0 {
@@ -114,7 +120,7 @@ a {
     display: flex;
     flex-direction: row;
     align-items: center;
-    
+
 }
 
 .loadingbar {
@@ -145,6 +151,9 @@ a {
 }
 
 .bildlada {
+  display: flex;
+  flex-direction: row;
+   flex-wrap: wrap;  /*gör så att innehållet "wrappar" runt när diven tar slut */
     width: 1300px;
     border: 3px solid black;
     background-color: white;
@@ -152,12 +161,14 @@ a {
 }
 
 .innebild {
-    margin: 5px 0px 5px 10px;
+    margin: 7px;
     border: 2px solid #232222;
     border-radius: 10px;
 }
 
 .rubrik {
+  font-family: impact;
+    font-size: 1.5em;
     display: flex;
     flex-direction: column;
     align-items: center;
