--- a/projekt-hype/site/css/main.css
+++ b/projekt-hype/site/css/main.css
@@ -154,7 +154,7 @@ a {
   display: flex;
   flex-direction: row;
    flex-wrap: wrap;  /*gör så att innehållet "wrappar" runt när diven tar slut */
-    width: 1300px;
+    max-width: 1300px;
     border: 3px solid black;
     background-color: white;
     border-radius: 6px;
