--- a/projekt-hype/site/css/main.css
+++ b/projekt-hype/site/css/main.css
@@ -41,12 +41,6 @@ body {
 
 }
 
-.Picnavin:hover {
-box-shadow: 0px 0px 68px 21px rgba(144,161,201,1);
-opacity: 0;
-
-}
-
 .nav:hover {      /*när musen hovrar över så händer detta*/
     border-top: 2px solid #90A1C9;
     padding: 3px 5px 5px 5px; /*Detta fixade så att meny texten inte rörde sig när man "hovrade" över dem*/
@@ -112,6 +106,20 @@ a {
 .header {
     margin-top: 5px;
     margin-bottom: 5px;
+    position: relative;
+}
+
+.header:hover {
+    opacity: 0;
+}
+
+.header2 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    position: absolute;
+}
+
+.borderh {
     border-radius: 10px;
 }
 
